recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:49: error: not found: value noeud4
  noeud4(steps,length,angle,shrink)
  ^